--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,30 +2,58 @@
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12 well">
-			<div class="page-header">
+			<div class="span4">
+				<div class="page-header">
+					<h4>
+						<i class="icon-user"></i> <%= link_to @item.user.company.capitalize, user_path( @item.user ) %>  &raquo;  
+						<i class="icon-tag" ></i> <%= @item.title.capitalize %>
+					</h4>
+				</div>	
+			</div>
+			<div class="span4">
+				<% if @item.user == current_user %>
+					<% done = 1 + (@location.valid? ? 1 : 0) + (@elements.empty? ? 0 : 1) + (@bids.empty? || @bids.first.location.nil? ? 0 : 1) %>
+					<% left = {} %>
+					<% left[:location] = "new-location-button" unless @location.valid? %>
+					<% left[:element] = "new-element-button" if @elements.empty? %>
+					<% left[:bid] = "new-bid-button" if @bids.empty? || @bids.first.location.nil? %>
+					<%= render "shared/almost_complete", :done => done, :left => left %>
+				<% end # if correct user %>
+			</div>
+			<div class="span4">
 				<h4>
-					<i class="icon-user"></i> <%= link_to @item.user.company.capitalize, user_path( @item.user ) %>  &raquo;  
-					<i class="icon-tag" ></i> <%= @item.title.capitalize %>
+					<%= t(:ask_price, :scope => [:views, :items, :show] ) %>
+					<% unless @bids.empty? %>
+						<% asking_bid = @bids.first %>
+						<%= "#{asking_bid.offer} #{asking_bid.units} / #{@item.units}" %> »
+						<%= "#{asking_bid.location.shipping} #{asking_bid.location.city}" unless asking_bid.location.nil? %>
+						<%= t(:unknown, :scope => [:views, :locations, :show] ) if asking_bid.location.nil? %>
+					<% end # empty bids %>
 				</h4>
-			</div>	
-			<% if user_signed_in? %>
-				<% if current_user == @item.user %>
-					<%= content_tag(:button, :class => "btn btn-info", :id => "new-element-button" ) do %>
-						<%= content_tag(:i, "", :class => "icon-picture icon-white") %>
-						<%= t(:new_element_form) %>
-					<% end # content %>
-				<% else %>
-					<%= link_to new_item_bid_path( @item ), :class => "btn btn-success" do %>
+				<% unless @bid.id.nil? %>
+					<%= link_to [@item, @bid], :class => "btn btn-success", :id => "edit-bid-button" do %>
 						<%= content_tag(:i, "", :class => "icon-flag icon-white") %>
-						<%= t(:bid) %>
+						<%= t(:bid, :scope => [:views, :bids, :forms, :new]) %>
 					<% end # link %>
-				<% end %>
-			<% else %>
-				<%= t(:need_to_sign_in_to_bid) %>
-			<% end %>	
+				<% else %>
+					<%= link_to new_item_bid_path( @item ), :class => "btn btn-success", :id => "new-bid-button" do %>
+						<%= content_tag(:i, "", :class => "icon-flag icon-white") %>
+						<%= t(:bid, :scope => [:views, :bids, :forms, :new]) %>
+					<% end # link %>
+				<% end # correct user %>
+			</div>	
 		</div>
 		<div class="row-fluid">
 			<div class="span8 well">
+				<div class="page-header">
+					<h3>
+						<%= t(:elements, :scope => [:views, :elements, :show]) %>
+						<%= content_tag(:button, :class => "btn btn-info", :id => "new-element-button" ) do %>
+							<%= content_tag(:i, "", :class => "icon-picture icon-white") %>
+							<%= t(:element, :scope => [:views, :elements, :form, :new]) %>
+						<% end if @item.user == current_user # content %>
+					</h3>
+				</div>
 				<%= render "elements/partials/index" unless @elements.nil? %>
 				<%= t(:nothin_here_yet) if @elements.nil? || @elements.empty? %>
 			</div>
@@ -47,7 +75,7 @@
 						<% if current_user == @item.user %>
 							<%= content_tag(:button, :class => "btn btn-info", :id => "new-location-button") do %>
 								<%= content_tag(:i, "", :class => "icon-pencil icon-white") %>
-								<%= t(:edit_location) %>
+								<%= t(:edit_location, :scope => [:views, :locations, :forms, :new]) %>
 							<% end # button tag %>
 						<% end # if correct uer %>	
 						<%= render "locations/partials/show" %>
@@ -67,9 +95,9 @@
 	</div>
 </div>
 
-<% { 'element' => current_user == @item.user ,'bid' => user_signed_in?, 'location' => current_user == @item.user }.each do |type, show| %>
+<% { 'element' => "post" ,'bid' => "post", 'location' => (@location.valid? ? "put" : "post") }.each do |type, meth| %>
 	<div id="new-<%= type %>-dialog" class="ui-dialog-content ui-widget-content">
-		<%= render "#{type.pluralize}/partials/new", :remote => false, :parent => @item if show %>
+		<%= render "#{type.pluralize}/partials/new", :remote => false, :parent => @item, :method => meth %>
 	</div>
 <% end %>
 
