--- a/app/views/locations/partials/_new.html.erb
+++ b/app/views/locations/partials/_new.html.erb
@@ -1,10 +1,10 @@
 <!-- location new form -->
-<%= form_for [parent, @location], :method => "post", :remote => remote, :class => "well" do |f| %>
+<%= form_for [parent, @location], :method => method, :remote => remote, :class => "well" do |f| %>
 	<fieldset>
-  	<legend><%= t(:edit_location) %></legend>
-  	<% {:shipping => "mini", :address => "large", :city => "small", :state => "mini inline", :zip => "mini inline", :country => "mini inlin" }.each do |field, style| %>
+  	<legend><%= t(:edit_location, :scope => [:views, :locations, :forms, :new]) %></legend>
+  	<% {:shipping => "mini", :address => "large", :city => "small", :state => "mini inline", :zip => "mini inline", :country => "mini inline" }.each do |field, style| %>
 			<div class="control-group">
-				<%= f.label t(field), :class => "control-label" %>
+				<%= f.label t(field, :scope => [:views, :locations, :forms, :labels]), :class => "control-label" %>
 				<% case field %>
 					<% when :phone %>
 						<%= f.email_field field, :class => "input" + style %>
