--- a/app/views/users/partials/_edit.html.erb
+++ b/app/views/users/partials/_edit.html.erb
@@ -1,10 +1,10 @@
 <!--user edit partial-->
 <%= form_for @user, :method => "put", :class => "well" do |f| %>
   <fieldset>
-  	<legend><%= t(:edit_user) %></legend>
+  	<legend><%= t(:edit_user, :scope => [:views,:users,:forms,:labels]) %></legend>
   	<% [:phone,:company].each do |field| %>
 			<div class="control-group">
-				<%= f.label field, :class => "control-label" %>
+				<%= f.label t(field, :scope => [:views,:users,:forms,:labels]), :class => "control-label" %>
 				<% case field %>
 					<% when :phone %>
 						<%= f.phone_field field, :class => "input-xlarge" %>
@@ -13,6 +13,6 @@
 				<% end %>
 			</div>
 		<% end %>
-		<button type="submit" class="btn btn-primary"><%= t(:submit) %></button>
+		<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views,:users,:forms,:labels])) %></button>
   </fieldset>
 <% end %>  
