--- a/app/views/users/partials/_edit.html.erb
+++ b/app/views/users/partials/_edit.html.erb
@@ -13,6 +13,6 @@
 				<% end %>
 			</div>
 		<% end %>
-		<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views,:users,:forms,:labels])) %></button>
+		<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views,:users,:forms,:labels]) %></button>
   </fieldset>
 <% end %>  
