--- a/app/views/bids/partials/_new.html.erb
+++ b/app/views/bids/partials/_new.html.erb
@@ -4,11 +4,25 @@
 		<legend><%= t(:bid, :scope => [:views, :bids, :forms, :new]) %></legendt>
 		<div class="control-group">
 			<%= f.label t(:offer, :scope => [:views, :bids, :forms, :labels]), :class => "control-label" %>
-			<%= f.number_field :offer, :class => "input-large" %>
-			<%= f.select :units, options_for_select(["USD"]), :class => "input-small" %>
-			<%= "/ #{@item.units}"%>
+			<%= f.number_field :offer, :class => "input-small" %> <%=" #{t(:USD)} / #{@item.units.singularize}"%>
+		</div>
+		<div class="control-group">
+			<%= label_tag :shipping, "Shipping", :class => "control-label" %>
+			<select name="location[shipping]" style="width : 4em">
+				<%= options_for_select(['FAS','FOB','CNF','CIF','EXWORK']) %>
+			</select>
+			<%= text_field_tag "location[name]", "", :placeholder => t(:name, :scope => [:views, :bids, :forms, :placeholders]), 
+				:id => "autocomplete-target-box", :class => "input-small" %>
+		</div>
+		<div class="control-group">
+			<%= text_field_tag "location[address]", "", :placeholder => t(:address, :scope => [:views, :bids, :forms, :placeholders] ) %>
+			<% [:city, :state, :zip].each do |mini| %>
+				<%= text_field_tag "location[#{mini.to_s}", "", :class => "inline input-mini", :placeholder => t(mini, :scope => [:views, :bids, :forms, :placeholders] ) %>
+			<% end # each mini %>
+			<%= text_field_tag "location[country]", "", :placeholder => t(:country, :scope => [:views, :bids, :forms, :placeholders] ) %>
 		</div>
 		<%= content_tag(:button, t(:submit, :scope => [:views, :bids, :forms, :labels]), :class => "btn btn-success", :type => "submit" ) %>	
+		<%= content_tag(:button, t(:cancel, :scope => [:views, :bids, :forms, :labels]), :class => "btn", :id => "close-bid-button" ) %>
 	</fieldset>
 <% end %>
 
