--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,105 +2,23 @@
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12 well">
-			<div class="span4">
-				<div class="page-header">
-					<h4>
-						<i class="icon-user"></i> <%= link_to @item.user.company.capitalize, user_path( @item.user ) %>    &raquo;    
-						<i class="icon-tag" ></i> <%= @item.title.capitalize %>
-					</h4>
-				</div>	
-			</div>
-			<div class="span4">
-				<% if @item.user == current_user %>
-					<% done = 1 + (@location.valid? ? 1 : 0) + (@elements.empty? ? 0 : 1) + (@bids.empty? || @bids.first.location.nil? ? 0 : 1) %>
-					<% left = {} %>
-					<% left[:location] = "new-location-button" unless @location.valid? %>
-					<% left[:element] = "new-element-button" if @elements.empty? %>
-					<% left[:bid] = "new-bid-button" if @bids.empty? || @bids.first.location.nil? %>
-					<%= render "shared/almost_complete", :done => done, :left => left %>
-				<% end # if correct user %>
-			</div>
-			<div class="span4">
-				<h4>
-					<% if user_signed_in? %>
-						<%= t(:ask_price, :scope => [:views, :items, :show] ) %>
-						<% unless @bid.id.nil? %>
-							<% asking_bid = @bid %>
-							<%= "#{asking_bid.offer} #{asking_bid.units} / #{@item.units}" %> »
-							<%= "#{asking_bid.location.shipping} #{asking_bid.location.city}" unless asking_bid.location.nil? %>
-							<%= t(:unknown, :scope => [:views, :locations, :show] ) if asking_bid.location.nil? %>
-						<% else %>
-							<%= t(:unknown, :scope => [:views, :locations, :show] ) %>
-						<% end # empty bids %>
-					<% end # if user_signed_in? %>
-				</h4>
-				<% if user_signed_in? %>
-					<% unless @bid.id.nil? %>
-						<%= link_to [@item, @bid], :class => "btn btn-success", :id => "edit-bid-button" do %>
-							<%= content_tag(:i, "", :class => "icon-flag icon-white") %>
-							<%= t(:bid, :scope => [:views, :bids, :forms, :new]) %>
-						<% end # link %>
-					<% else %>
-						<%= link_to new_item_bid_path( @item ), :class => "btn btn-success", :id => "new-bid-button" do %>
-							<%= content_tag(:i, "", :class => "icon-flag icon-white") %>
-							<%= t(:bid, :scope => [:views, :bids, :forms, :new]) %>
-						<% end # link %>
-					<% end # correct user %>
-				<% end #user_signed_in %>
-			</div>	
+			<%= render "items/partials/show_title" %>	
 		</div>
 		<div class="row-fluid">
-			<div class="span8 well">
-				<div class="page-header">
-					<h3>
-						<%= t(:elements, :scope => [:views, :elements, :show]) %>
-						<%= content_tag(:button, :class => "btn btn-info", :id => "new-element-button" ) do %>
-							<%= content_tag(:i, "", :class => "icon-picture icon-white") %>
-							<%= t(:element, :scope => [:views, :elements, :form, :new]) %>
-						<% end if @item.user == current_user # content %>
-					</h3>
-				</div>
-				<%= render "elements/partials/index" unless @elements.nil? %>
-				<%= t(:nothin_here_yet) if @elements.nil? || @elements.empty? %>
+			<div class="span4 well">
+				<%= render "items/partials/show_elements" %>
 			</div>
 			<div class="span4 well">
-				<div class="span12-fluid">
-					<div class="page-header">
-						<h2><%= t(:item_info) %></h2>
-						<dl>
-							<% [:description , :quantity , :units , :material].each do |key, title| %>
-								<dt><%= t(key) %></dt>
-								<dd><%= @item[key].nil? ? t(:unknown) : @item[key] %></dd>
-							<% end # each key %>
-						</dl>
-					</div>
-				</div>
-				<div class="span12-fluid">
-					<div class="page-header">
-						<h2><%= t(:shipping_location) %></h2>
-						<% if current_user == @item.user %>
-							<%= content_tag(:button, :class => "btn btn-info", :id => "new-location-button") do %>
-								<%= content_tag(:i, "", :class => "icon-pencil icon-white") %>
-								<%= t(:edit_location, :scope => [:views, :locations, :forms, :new]) %>
-							<% end # button tag %>
-						<% end # if correct uer %>	
-						<%= render "locations/partials/show" %>
-					</div>
-				</div>
-				<div class="span12-fluid">
-					<div class="page-header">
-						<h2><%= t(:bid_data) %></h2>
-						<p><%= content_tag(:i, "", :class => "icon-flag" )%> <%= @bids.count %></p>
-						<% unless @bids.nil? || @bids.empty? %>
-							<p><%= t(:last_offer) %> <%= @bids.last.offer %> <%= @bids.last.units %></p>
-						<% end %>
-					</div>
-				</div>
+				<%= render "items/partials/show_price" %>
+			</div>
+			<div class="span4 well">
+				<%= render "items/partials/show_data" %>
 			</div>
 		</div>	
 	</div>
 </div>
 
+<!-- dialog and jquery ui section -->
 <% stuff = {} %>
 <% if user_signed_in? %>
 	<% stuff["element"] = "post" if @item.user == current_user %>
