--- a/app/views/items/partials/_index.html.erb
+++ b/app/views/items/partials/_index.html.erb
@@ -2,7 +2,7 @@
 <section id="stock-items">
 	<div class="span12-fluid">
 		<div class="page-header">
-			<h4><i class="icon-tags" ></i> <%= t( :new_items ) %></h4>
+			<h4><i class="icon-tags" ></i> <%= t( :new_items, :scope => [:views, :items, :forms, :index] ) %></h4>
 		</div>
 	</div>
 	</div class="span12-fluid">
