--- a/app/views/items/partials/_show_elements.html.erb
+++ b/app/views/items/partials/_show_elements.html.erb
@@ -4,7 +4,7 @@
 		<%= t(:elements, :scope => [:views, :elements, :show]) %>
 		<%= content_tag(:button, :class => "btn btn-info", :id => "new-element-button" ) do %>
 			<%= content_tag(:i, "", :class => "icon-picture icon-white") %>
-			<%= t(:element, :scope => [:views, :elements, :form, :new]) %>
+			<%= t(:element, :scope => [:views, :elements, :forms, :new]) %>
 		<% end if @item.user == current_user # content %>
 	</h3>
 </div>
