--- a/app/views/locations/partials/_new.html.erb
+++ b/app/views/locations/partials/_new.html.erb
@@ -17,6 +17,6 @@
 				<% end %>
 			</div>
 		<% end %>
-		<button type="submit" class="btn btn-primary"><%= t(:submit) %></button>
+		<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views, :locations, :forms, :labels]) %></button>
   </fieldset>
 <% end # form_tag  %>
