--- a/app/views/elements/partials/_new.html.erb
+++ b/app/views/elements/partials/_new.html.erb
@@ -1,13 +1,13 @@
 <!-- Upload new element -->
 <%= form_for [@item, @item.elements.new], :html => {:multipart => true}, :remote => remote do |f| %>
 	<fieldset>
-		<legend><%= t(:new_element_form) %></legend>
+		<legend><%= t(:element, :scope => [:views, :elements, :forms, :new]) %></legend>
 		<div class="control-group">
-			<%= f.label :picture, t(:picture), :class => "control-label" %>
+			<%= f.label :picture, t(:picture, :scope => [:views, :elements, :forms, :new]), :class => "control-label" %>
 			<%= f.file_field :picture, :accept => "image/gif,image/png, image/jpg, image/jpeg" %>
-			<%= f.label :metadata, t(:metadata), :class => "control-label" %>
+			<%= f.label :metadata, t(:metadata, :scope => [:views, :elements, :forms, :new]), :class => "control-label" %>
 			<%= f.text_field :metadata %>
-			<button type="submit" class="btn btn-primary"><%= t(:submit) %></button>
+			<button type="submit" class="btn btn-primary"><%= t(:submit, :scope => [:views, :elements, :forms, :labels]) %></button>
 		</div>
 	</fieldset>
 <% end %>
